Fix Health Check4